--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@ mat-toolbar{
 }
 
 .spacer {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 .logo-spacer {
   margin-top: 20px;
@@ -22,9 +22,19 @@ mat-toolbar{
 }
 .mobile{
   font-size: 18px;
+  color: 	#F99240;
 }
 
 mat-toolbar{
   font-size: 15px;
   font-weight: lighter;
+}
+
+.active-list-item {
+  color: #F43A43;
+  font-weight: bold;
+}
+
+a {
+  color: #ffffff;
 }
