--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -2,8 +2,8 @@
 
 @include mat-core();
 
-$my-theme-primary: mat-palette($mat-red,700);
-$my-theme-accent: mat-palette($mat-gray,600);
+$my-theme-primary: mat-palette($mat-red,700); //#1B1E41
+$my-theme-accent: mat-palette($mat-gray,600); //#F99240;
 //$my-theme-primary: mat-palette($mat-teal,900);
 
 $my-theme-warn: mat-palette($mat-red);
