Update Add Cart Option

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     </div>
     <div fxFlex="20%">
 <!--      <div class="logo-spacer"></div>-->
-      <img src="assets/images/logo2.png" width="100%">
+      <a routerLink="home"><img src="assets/images/logo2.png" width="100%"></a>
     </div>
     <div fxFlex="2%">
     </div>
