--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -23,7 +23,7 @@
               <span class="title">TITLE</span><br/>
               <span class="name">Name</span><br/>
               <span class="price">Rs. 1500</span><br/>
-              <span><button mat-raised-button>Add to Cart</button></span>
+              <span><button mat-raised-button (click)="addCart(x)">Add to Cart</button></span>
             </mat-card-footer>
           </mat-card-content>
         </div>
