--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <body>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
     <div fxFlex="25%"></div>
-    <div fxFlex="50%">
+    <div fxFlex="50%" style="text-align: center">
       <h1>Welcome to Ideon Advertising</h1>
       <div style="text-align: center">
         <img src="assets/images/loader.gif" width="200" height="200">
