--- a/src/app/admin/add-category/add-category.component.html
+++ b/src/app/admin/add-category/add-category.component.html
@@ -1,6 +1,8 @@
 <div fxLayout="row" fxLayout.xs="column" class="mt-10">
     <div fxFlex="5%"></div>
     <div fxFlex="50%">
+        <button mat-raised-button color="primary" (click)="onAdd()"><mat-icon>add</mat-icon> Add</button>
+        <div class="mb-5"></div>
         <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource">
         
@@ -25,13 +27,14 @@
             <!-- action Column -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element"></td>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button color="accent" (click)="onEdit(element)"><mat-icon>eco</mat-icon></button>
+                    <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+                </td>
             </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-                <button><mat-icon>delete</mat-icon></button>
-            </tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
             <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
