--- a/src/app/admin/add-category/add-category.component.html
+++ b/src/app/admin/add-category/add-category.component.html
@@ -5,38 +5,44 @@
         <div class="mb-5"></div>
         <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource">
-        
+
             <!-- id Column -->
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> Id. </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
-        
+
             <!-- code Column -->
             <ng-container matColumnDef="code">
                 <th mat-header-cell *matHeaderCellDef> Code </th>
                 <td mat-cell *matCellDef="let element"> {{element.code}} </td>
             </ng-container>
-        
+
             <!-- na,e Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
-        
+
             <!-- action Column -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button color="accent" (click)="onEdit(element)"><mat-icon>eco</mat-icon></button>
-                    <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+                    <button mat-icon-button color="warn" (click)="onDelete(element.id)"><mat-icon>delete</mat-icon></button>
                 </td>
             </ng-container>
-        
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
             <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
+    </div>
+    <div fxFlex="5%"></div>
+    <div fxFlex="45%">
+      <mat-card>
+        <img src="assets/images/advertising.png" width="100%">
+      </mat-card>
     </div>
 </div>
