Update Product list view

--- a/src/app/admin/add-product/my-product/my-product.component.html
+++ b/src/app/admin/add-product/my-product/my-product.component.html
@@ -58,7 +58,7 @@
               <img [src]="image" width="100%" height="100%">
               <div class="upload-btn-wrapper">
                 <button class="btn">Choose File</button>
-                <input type="file" accept=".jpg,.jpeg,.png" (change)="readImage($event)" style="display: inline-block;">
+                <input type="file" accept=".jpg,.jpeg,.png" (change)="readImage($event)" style="display: inline-block; cursor: pointer">
               </div>
             </mat-card>
             <br/><br/>
