--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -5,27 +5,34 @@
     <mat-card-content>
       <span><b>CATEGORIES</b></span>
       <mat-list *ngIf = "categories">
-        <mat-list-item><a class="pointer">All</a></mat-list-item>
-        <mat-list-item *ngFor="let category of categories"><a class="pointer">{{category.name}} (5)</a></mat-list-item>
+        <mat-list-item>
+          <a class="pointer" (click)="selectCategory(null)" [ngClass]="{
+                    'active-category' : selectedCategory === 'all'}">All
+          </a>
+        </mat-list-item>
+        <mat-list-item *ngFor="let category of categories">
+          <a class="pointer" (click)="selectCategory(category)" [ngClass]="{
+                    'active-category' : category.code === selectedCategory}">
+            {{category.name}} ({{getLengthFromCatCode(category.code)}})
+          </a>
+        </mat-list-item>
       </mat-list>
     </mat-card-content>
   </div>
 
   <div fxFlex="75%">
     <div fxLayout="row wrap" class="mt-10">
-      <div fxFlex.lg="25%" *ngFor="let x of products">
+      <div fxFlex.lg="25%" *ngFor="let product of selectedProducts">
         <div class="item-card">
-          <mat-card-content>
             <mat-card class="item-image">
-              <img src="assets/images/design/{{x}}.jpg" width="100%">
+              <img [src]=product.image width="100%" height="100%">
             </mat-card>
             <mat-card-footer>
-              <span class="title">TITLE</span><br/>
-              <span class="name">Name</span><br/>
-              <span class="price">Rs. 1500</span><br/>
-              <span><button mat-raised-button (click)="addCart(x)">Add to Cart</button></span>
+              <span class="name">{{product.name}}</span><br/>
+              <span class="price">Rs. {{product.price}}</span><br/>
+              <span>( {{product.quantity}} {{product.unit}} )</span><br/>
+              <span><button mat-raised-button (click)="addCart(product)">Add to Cart</button></span>
             </mat-card-footer>
-          </mat-card-content>
         </div>
       </div>
     </div>
