--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -5,17 +5,20 @@
 }
 
 .item-image{
-  min-height: 230px;
+  height: 230px;
+  width: 230px;
 }
 
 .title{
+  text-align: center;
   font-size: 10px;
-  color: #cccccc;
+  color: #1B1E41;
 }
 
 .name{
   text-align: center;
   font-size: 15px;
+  color: #1B1E41;
 }
 
 .price{
@@ -36,3 +39,7 @@ a{
   color: #676767;
 }
 
+.active-category {
+  color: #F43A43;
+  font-weight: bold;
+}
