--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -36,7 +36,7 @@
       <img src="assets/images/vl.png" width="50" height="50">
     </div>
 
-    <div fxFlex="10%">
+    <div fxFlex="10%" style="cursor: pointer">
       <div class="spacer"></div>
       <mat-icon>shopping_cart</mat-icon>
     </div>
