--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -9,10 +9,9 @@
   width: 230px;
 }
 
-.title{
+.qty{
   text-align: center;
-  font-size: 10px;
-  color: #1B1E41;
+  font-size: 12px;
 }
 
 .name{
@@ -42,4 +41,8 @@ a{
 .active-category {
   color: #F43A43;
   font-weight: bold;
+}
+.cat-card {
+  background: #feffe3;
+  height: 440px;
 }
