Update Nav-bar and product

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -38,7 +38,7 @@
 
     <div fxFlex="10%" style="cursor: pointer">
       <div class="spacer"></div>
-      <mat-icon>shopping_cart</mat-icon>
+        <mat-icon matBadge="0" matBadgePosition="after" matBadgeColor="warn">shopping_cart</mat-icon>
     </div>
   </div>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
