--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -14,6 +14,12 @@
   font-size: 12px;
 }
 
+.description{
+  text-align: center;
+  font-size: 12px;
+  background: #feffe3;
+}
+
 .name{
   text-align: center;
   font-size: 15px;
