Update UI and Progress Bar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
     <div fxFlex="25%"></div>
     <div fxFlex="50%" style="text-align: center">
-      <h1>Welcome to Ideon Advertising</h1>
+      <h1>Welcome to IDEON Advertising</h1>
       <div style="text-align: center">
         <img src="assets/images/loader.gif" width="200" height="200">
       </div>
@@ -11,7 +11,7 @@
   </div>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
     <div fxFlex="5%"></div>
-    <div fxFlex="100%" style="text-align: center">
+    <div fxFlex="100%" style="text-align: center;">
       <mat-card class="client-card" *ngFor="let client of clients" fxFlex="10%">
         <img style="alignment: center" src="assets/images/clients/{{client}}" width="100%">
       </mat-card>
