--- a/src/app/shared/view-image/view-image.component.html
+++ b/src/app/shared/view-image/view-image.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row">
-  <ngx-imageviewer [width]="800" [height]="500" [src]="images"></ngx-imageviewer>
+  <ng-image-viewer [width]="800" [height]="500" [src]="[images]"></ng-image-viewer>
 </div>
 <div fxLayout="row" class="btn-container">
   <div fxFlex="90%" class="mr-5"></div>
