--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -57,13 +57,15 @@ a {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   transform: translate(-60%, 0);
+  cursor: pointer;
 }
 
 .dropdown-content a {
   color: white;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display: flex;
+  cursor: pointer;
 }
 
 .dropdown-content a:hover {background-color: #F43A43;}
@@ -74,4 +76,9 @@ a {
 
 .dropdown:hover .dropbtn {
   color: #F43A43;
+}
+
+.icon-drop {
+  margin-top: 5px;
+  margin-right: 10px
 }
