--- a/src/app/products/add-cart/add-cart.component.html
+++ b/src/app/products/add-cart/add-cart.component.html
@@ -1,2 +1,10 @@
-<p>add-cart works!</p>
-<button mat-stroked-button (click)="onClose()">Close</button>
+<form [formGroup]="form">
+  <mat-form-field>
+    <input type="text" matInput formControlName="amount" placeholder="Quantity">
+  </mat-form-field>
+  <button color="warn" mat-mini-fab (click)="minus()">-</button>
+  <button mat-mini-fab (click)="plus()">+</button>
+  <button color="primary" mat-raised-button (click)="addToCart()">Add</button>
+</form>
+<p></p>
+<!--<button mat-stroked-button (click)="onClose()">Close</button>-->
