--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -32,7 +32,7 @@
               <span class="name">{{product.name}}</span><br/>
               <span class="price">Rs. {{product.price}}</span><br/>
               <span class="qty">( {{product.quantity}} {{product.unit}} )</span><br/>
-              <span><button mat-raised-button (click)="addCart(product)">Add to Cart</button></span>
+              <span><button mat-stroked-button color="primary" (click)="addCart(product)">Add to Cart</button></span>
             </mat-card-footer>
         </div>
       </div>
