--- a/src/app/admin/add-product/add-product.component.html
+++ b/src/app/admin/add-product/add-product.component.html
@@ -1,16 +1,24 @@
 <div fxLayout="row" fxLayout.xs="column" class="mt-10">
   <div fxFlex="10%"></div>
   <div fxFlex="80%">
-    <button mat-raised-button color="primary" (click)="onAdd()"><mat-icon>add</mat-icon> Add</button>
+    <div class="search-div">
+      <button mat-raised-button color="primary" (click)="onAdd()"><mat-icon>add</mat-icon> Add</button>
+      <mat-form-field class="search-form-field" floatLabel="never">
+        <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear"*ngIf="searchKey"  (click)="onSearchClear()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
     <div class="mb-5"></div>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource">
 
         <!-- id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id. </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+<!--        <ng-container matColumnDef="id">-->
+<!--          <th mat-header-cell *matHeaderCellDef> Id. </th>-->
+<!--          <td mat-cell *matCellDef="let element"> {{element.id}} </td>-->
+<!--        </ng-container>-->
 
         <!-- code Column -->
         <ng-container matColumnDef="code">
