--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <body>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
-    <div fxFlex="25%"></div>
+    <div fxFlex="10%"></div>
     <div fxFlex="50%" style="text-align: center">
       <h1>Welcome to IDEON Advertising</h1>
-      <div style="text-align: center">
+      <div style="text-align: left">
         <img src="assets/images/loader.gif" width="200" height="200">
       </div>
-      <h3>Our Clients</h3>
+      <h3>____________ Our Clients ____________</h3>
     </div>
   </div>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
