--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,12 @@
 body {
-  background-image: url("../../assets/images/5.jpg");
+  background-image: url("../../assets/images/bulb.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
 h1,h3{
-  color: white;
-  text-align: center;
+  color: #1B1E41;
+  text-align: left;
 }
 
 .client-card {
