--- a/src/app/shared/shopping-cart/shopping-cart.component.html
+++ b/src/app/shared/shopping-cart/shopping-cart.component.html
@@ -40,6 +40,6 @@
 </mat-list>
 
 <div *ngIf="cartDetails.length == 0">
-  <p>Shopping cart Empty</p>
-  <img src="assets/images/empty-shopping.png" width="100%">
+  <p>Shopping Cart Empty</p>
+  <img style="margin-left: 20px;" src="assets/images/empty-shopping.png" height="400px">
 </div>
