--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -39,7 +39,7 @@
     <div fxFlex="10%" style="cursor: pointer">
       <div class="spacer"></div>
         <mat-icon (click)="shoppingCart()" [matBadge]="cartService.cart.length" matBadgePosition="after" matBadgeColor="warn">shopping_cart</mat-icon>
-        <mat-icon style="margin-left: 25px;">person</mat-icon>
+        <mat-icon style="margin-left: 25px;" (click)="userLogin()">person</mat-icon>
     </div>
   </div>
   <div fxLayout="row" fxLayout.xs="column" class="mt-10">
