--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,15 +13,15 @@
       <div class="spacer"></div>
 
       <mat-form-field class="example-full-width form-space">
-        <input matInput placeholder="Search.." type="search">
+        <input [(ngModel)]="filterValue"  matInput placeholder="Search.." type="search">
       </mat-form-field>
       <mat-form-field class="form-space-margin">
-        <mat-select placeholder="Select Category">
-          <mat-option value="Any">Any</mat-option>
+        <mat-select [(ngModel)]="selectedCategory" placeholder="Select Category">
+          <mat-option value="All">Any</mat-option>
           <mat-option *ngFor="let category of categories" [value]="category.code">{{category.name}}</mat-option>
         </mat-select>
       </mat-form-field>
-      <button mat-stroked-button><mat-icon>search</mat-icon></button>
+      <button mat-stroked-button (click)="onSearch()"><mat-icon>search</mat-icon></button>
     </div>
     <div fxFlex="5%"></div>
 
